# padam-cli

./: .gitignore  LICENSE  PKGBUILD  README.md  install.sh  logs.txt  main.bak.py  main.py  models.py  padam-cli.spec  printer.py  pyproject.toml  scraper.py  test_updater.txt  tui.py  uninstall.sh
config/: config.json  domains.txt
installation/: install.ps1
src/: argparser.py  cache.py  config.py  constant.py  constants.py  logger.py  media.py  printer.py  scraper.py  search.py  tui.py  update.py  utils.py
