[project]
name = "padam-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "requests>=2.34.2",
    "requests-html>=0.10.0",
    "textual>=8.2.7",
]

[dependency-groups]
dev = [
    "nuitka>=4.1.3",
]
