[project]
name = "padam-cli"
version = "0.2.0"
description = "browse and play tamil mobies with in ur terminal"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "httpx>=0.28.1",
    "inquirerpy>=0.3.4",
    "lxml>=6.1.1",
    "requests>=2.34.2",
    "requests-html>=0.10.0",
    "textual>=8.2.7",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
