[project.scripts]
padam-cli = "main:main"
[project]
name = "padam-cli"
version = "0.4.4"
description = "browse and play tamil mobies with in ur terminal"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "httpx>=0.28.1",
    "inquirerpy>=0.3.4",
    "lxml>=6.1.1",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
